k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tour-package-fe-service
spec:
  selector:
    app: tour-package-fe
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
